--- a/index.html
+++ b/index.html
@@ -12,94 +12,31 @@
 <td id="layout-menu">
 <div class="menu-category">Info</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="cv_ywu.pdf">CV</a></div>
+<div class="menu-item"><a href="\cv_test-6.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="bib.html">Publications</a></div>
 <div class="menu-item"><a href="code.html">Software</a></div>
 <div class="menu-item"><a href="ln.html">Lecture&nbsp;notes</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="https://courses.engr.illinois.edu/ece563/fa2014">ECE563</a></div>
-<div class="menu-item"><a href="teaching/598/index.html" class="current">ECE598YW</a></div>
-<div class="menu-item"><a href="teaching/364/index.html" class="current">STAT364</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Yihong Wu </h1>
+<h1>Qiang Wu </h1>
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Assistant professor of <a href="http://statistics.yale.edu/">Statistics</a><br />
-<a href="http://www.yale.edu/">Yale University</a><br />
-24 Hillhouse Ave Room 203<br />
-New Haven, CT 06511<br /></p>
-<p>✉   yihong.wu@yale.edu<br />
-☏   203-436-9003</p>
+<p>Graduate Student of <a href="http://statistics.yale.edu/">Mathematics</a><br />
+<a href="http://www.yale.edu/">UIUC</a><br />
+Altgeld Hall<br />
+Urbana, IL 61801<br /></p>
+<p>✉   qiangwu2@illinois.edu<br />
+☏   217-418-5286</p>
 </div></div>
 <h2>Research interests</h2>
 <ul>
-<li><p>theoretical and algorithmic aspects of high-dimensional statistics</p>
+<li><p>Probability Theory, Potential Theory</p>
 </li>
-<li><p>information theory</p>
-</li>
-<li><p>additive combinatorics and optimal transportation, with applications to information theory and control</p>
-</li>
-</ul>
-<h2>Recent papers</h2>
-<ul>
-<li><p>Jason M. Klusowski and Yihong Wu, "<a href="preprints/cc.pdf">Estimating the Number of Connected Components in a Graph via Subgraph Sampling</a>", working paper, Feb 2017.</p>
-</li>
-</ul>
-<ul>
-<li><p>Yury Polyanskiy, Ananda Theertha Suresh and Yihong Wu, "<a href="https://arxiv.org/abs/1702.05574">Sample complexity of population recovery</a>", Feb 2017.</p>
-</li>
-</ul>
-<ul>
-<li><p>Yihong Wu and Pengkun Yang, "<a href="https://arxiv.org/abs/1612.03375">Sample complexity of the distinct elements problem</a>", draft, Dec 2016.</p>
-</li>
-</ul>
-<ul>
-<li><p>Alon Orlitsky, Ananda Theertha Suresh, and Yihong Wu, "<a href="http://www.pnas.org/content/113/47/13283.full">Optimal prediction of the number of unseen species</a>", Proceedings of the National Academy of Sciences, vol. 113, no. 47, pp. 13283–13288, Nov 2016. [<a href="reprints/species-pnas.pdf">paper</a>] [<a href="reprints/species-si.pdf">supplement</a>]</p>
-</li>
-</ul>
-<ul>
-<li><p>Ashok Vardhan Makkuva and Yihong Wu, "<a href="http://arxiv.org/abs/1601.07498">Equivalence of additive-combinatorial linear inequalities for Shannon entropy and differential entropy</a>", Jan 2016.</p>
-</li>
-</ul>
-<ul>
-<li><p>Flavio P. Calmon, Yury Polyanskiy, and Yihong Wu, "<a href="http://arxiv.org/abs/1512.06429">Strong data processing inequalities for input constrained additive noise channels</a>", Dec 2015.</p>
-</li>
-</ul>
-<ul>
-<li><p>Bruce Hajek, Yihong Wu and Jiaming Xu, "<a href="http://arxiv.org/abs/1510.09219">Submatrix localization via message passing</a>", draft, Oct 2015.</p>
-</li>
-</ul>
-<ul>
-<li><p>Bruce Hajek, Yihong Wu and Jiaming Xu, "<a href="http://arxiv.org/abs/1509.07859">Information Limits for Recovering a Hidden Community</a>", draft, Sep 2015.</p>
-</li>
-</ul>
-<ul>
-<li><p>Bruce Hajek, Yihong Wu and Jiaming Xu, "<a href="http://arxiv.org/abs/1510.02786">Recovering a Hidden Community Beyond
-the Spectral Limit in <img class="eq" src="eqs/1555569515-130.png" alt="O(|E|  log^* |V|)" style="vertical-align: -5px" /> Time</a>", draft, Oct 2015.</p>
-</li>
-</ul>
-<ul>
-<li><p>Yury Polyanskiy and Yihong Wu, "<a href="http://arxiv.org/abs/1508.06025">Strong data-processing inequalities for channels and Bayesian networks</a>", draft, Aug 2015.</p>
-</li>
-</ul>
-<ul>
-<li><p>Yihong Wu and Pengkun Yang, "<a href="http://arxiv.org/abs/1504.01227">Chebyshev polynomials, moment
-matching, and optimal estimation of the unseen</a>", draft, Mar 2015.</p>
-</li>
-</ul>
-<ul>
-<li><p>Yury Polyanskiy and Yihong Wu, "<a href="http://arxiv.org/abs/1504.04419">Wasserstein continuity of entropy
-and outer bounds for interference channels</a>", IEEE Trans. Inf. Theory, vol. 62, no. 7, pp. 3992&ndash;4002, Jul. 2016. [<a href="reprints/ic_isit.pdf">isit</a>]
-[<a href="https://simons.berkeley.edu/news/research-vignette-pfister-et-al-2015">Simons Institute research vignette</a>]</p>
-</li>
-</ul>
-<ul>
-<li><p>Bruce Hajek, Yihong Wu, and Jiaming Xu, "<a href="http://www.jmlr.org/proceedings/papers/v49/hajek16.pdf">Semidefinite Programs for Exact Recovery of a Hidden Community</a>", Conf. on Learning
-Theory (COLT), Jun 2016. [<a href="http://arxiv.org/abs/1602.06410">arxiv</a>]</p>
+<li><p>Differential Geometry</p>
 </li>
 </ul>
 <div id="footer">
