--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <td id="layout-menu">
 <div class="menu-category">Info</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="\cv_test-6.pdf">CV</a></div>
+<div class="menu-item"><a href="cv_test-6.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="bib.html">Publications</a></div>
 <div class="menu-item"><a href="code.html">Software</a></div>
