--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Urbana, IL 61801<br /></p>
 </div></div>
 <h2>Research interests</h2>
 <ul>
-<li><p>Probability Theory, Potential Theorykkkkkkdsjkdkvavja.vfnajvdvadfkvhakdfvadjfbvadfvbadvan,dvadvbandfva,bfdnvba,dfnbv,adnfbvaerjbaldfjbvaldjvbaldbv</p>
+<li><p>Probability Theory, Potential Theorykkkkkkdsjkdkvavja.vfnajvdva</p>
 </li>
 <li><p>Differential Geometry</p>
 </li>
