--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="cv_test-6.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="ln.html">Lecture&nbsp;notes</a></div>
-<div class="menu-category">Teaching</div>
+  <div class="menu-category"><a href="http://www.math.illinois.edu/~berndt/math441.html"></a>Teaching</div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
