--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Graduate Student of <a href="http://statistics.yale.edu/">Mathematics</a><br />
-<a href="http://www.yale.edu/">UIUC</a><br />
+<p>Graduate Student of <a href="http://www.math.illinois.edu">Mathematics</a><br />
+<a href="http://www.uiuc.edu/">UIUC</a><br />
 Altgeld Hall<br />
 Urbana, IL 61801<br /></p>
 <p>✉   qiangwu2@illinois.edu<br />
@@ -33,11 +33,12 @@ Urbana, IL 61801<br /></p>
 </div></div>
 <h2>Research interests</h2>
 <ul>
-<li><p>Probability Theory, Potential Theorykkkkkkdsjkdkvavja.vfnajvdva</p>
+<li><p>Probability Theory, Potential Theory, and some topics related to partial differential equations and mathematical physics</p>
 </li>
 <li><p>Differential Geometry</p>
 </li>
 </ul>
+<h3>Seminars Calendar at UIUC Math Department</h3>  
 <div id="footer">
 <div id="footer-text">
 Page generated 2017-02-24 07:55:46 Ame, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
