--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ Urbana, IL 61801<br /></p>
 <p>✉   qiangwu2@illinois.edu<br />
 ☏   217-418-5286</p>
 </div></div>
+ <h2>Biography</h2>
+<ul>
+<li><p>Probability Theory, Potential Theory, and some topics related to partial differential equations and mathematical physics</p>
+</li> 
 <h2>Research interests</h2>
 <ul>
 <li><p>Probability Theory, Potential Theory, and some topics related to partial differential equations and mathematical physics</p>
