--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@ Urbana, IL 61801<br /></p>
 <p>✉   qiangwu2@illinois.edu<br />
 ☏   217-418-5286</p>
 </div></div>
- <h1>Biography</h1>
-<ul>
-<li><p>Probability Theory, Potential Theory, and some topics related to partial differential equations and mathematical physics</p>
-</li> 
+  <h1> Biography </h1>
+  <ul>
+    <li><p> I am a second year master student of mathematics at UIUC, I obtained my Bechleor degree from Xidian University at China.</p>
+    </li>
+  </ul>
 <h2>Research interests</h2>
 <ul>
 <li><p>Probability Theory, Potential Theory, and some topics related to partial differential equations and mathematical physics</p>
