--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@ Urbana, IL 61801<br /></p>
 </li>
 </ul>
 <h2>Seminars Calendar at UIUC Math Department</h2>  
+  <ul>
+    <li><p>Upcoming seminars in different areas <a href="http://torus.math.uiuc.edu/cal/math/cal">here</a></p>
+    </li>
+  </ul>
 <div id="footer">
 <div id="footer-text">
 Page generated 2017-02-24 07:55:46 Ame, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
