--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="cv_test-6.pdf">CV</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="ln.html">Lecture&nbsp;notes</a></div>
+<div class="menu-item"><a href="ln.html">Publication</a></div>
+  <div class="menu-item"><a href="in.html">Lecture&nbsp;notes</a></div>
+  <div class="menu-item"><a href="in.html">Workshop&nbsp;Conference</a></div>
   <div class="menu-category">Teaching</div>
   <div class="menu-item"><a href="http://www.math.illinois.edu/~berndt/math441.html">MATH441</a></div>
 </td>
@@ -47,6 +49,12 @@ Urbana, IL 61801<br /></p>
 <h2>Seminars Calendar at UIUC Math Department</h2>  
   <ul>
     <li><p>Upcoming seminars in different areas <a href="http://torus.math.uiuc.edu/cal/math/cal">here</a></p>
+    </li>
+  </ul>
+  
+ <h2>Slected Lecture&nbsp;Notes</h2>   
+  <ul>
+    <li><p>MATH525 Algebraic Topology</p>
     </li>
   </ul>
 <div id="footer">
