--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="ln.html">Publication</a></div>
   <div class="menu-item"><a href="in.html">Lecture&nbsp;notes</a></div>
-  <div class="menu-item"><a href="in.html">Workshop&nbsp;Conference</a></div>
+  <div class="menu-item"><a href="in.html">Workshop</a></div>
   <div class="menu-category">Teaching</div>
   <div class="menu-item"><a href="http://www.math.illinois.edu/~berndt/math441.html">MATH441</a></div>
 </td>
