--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Urbana, IL 61801<br /></p>
 </div></div>
   <h2> Biography </h2>
   <ul>
-    <li><p> I am a second year master student of mathematics at UIUC, I obtained my Bechleor degree from Xidian University at China.</p>
+    <li><p> I am a second year master student of mathematics at UIUC, I obtained my Bechleor degree from Xidian University in China.</p>
     </li>
   </ul>
 <h2>Research interests</h2>
