--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <p>Graduate Student of <a href="http://www.math.illinois.edu">Mathematics</a><br />
-<a href="http://www.uiuc.edu/">UIUC</a><br />
+<a href="http://www.uiuc.edu/">University of Illinois at Urbana-Champaign</a><br />
 Altgeld Hall<br />
 Urbana, IL 61801<br /></p>
 <p>✉   qiangwu2@illinois.edu<br />
@@ -36,7 +36,7 @@ Urbana, IL 61801<br /></p>
 </div></div>
   <h2> Biography </h2>
   <ul>
-    <li><p> I am a second year master student of mathematics at UIUC, I obtained my Bechleor degree from Xidian University in China.</p>
+    <li><p> I am a second year master student of mathematics at University of Illinois at Urbana-Champaign, I obtained my Bechleor degree from Xidian University in China.</p>
     </li>
   </ul>
 <h2>Research interests</h2>
