--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Urbana, IL 61801<br /></p>
   
  <h2>Slected Lecture&nbsp;Notes</h2>   
   <ul>
-    <li><p>MATH525 Algebraic Topology</p>
+    <li><p>MATH525 Algebraic Topology(on working and to be updated soon)</p>
     </li>
   </ul>
 <div id="footer">
