--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Urbana, IL 61801<br /></p>
   <ul>
     <li><p>MATH525 Algebraic Topology(on working and to be updated soon)</p>
     </li>
+    <li><p> MATH518 Differential Manifolds</p>
+    </li>
   </ul>
 <div id="footer">
 <div id="footer-text">
