--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ Urbana, IL 61801<br /></p>
     <li><p> MATH518 Differential Manifolds</p>
     </li>
   </ul>
+  <h2> Links</h2>
+  <ul> 
+    <li><p>Fun blog<a href="https://qchu.wordpress.com"> here</a></p>
+    </li>
+  </ul>
 <div id="footer">
 <div id="footer-text">
 Page generated 2017-02-24 07:55:46 Ame, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
