--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Urbana, IL 61801<br /></p>
   </ul>
   <h2> Links</h2>
   <ul> 
-    <li><p>Fun blog<a href="https://qchu.wordpress.com"> here</a></p>
+    <li><p>Annoying Precision math bolg<a href="https://qchu.wordpress.com"> here</a></p>
     </li>
   </ul>
 <div id="footer">
