--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div class="menu-item"><a href="in.html">Workshop</a></div>
   <div class="menu-category">Teaching</div>
   <div class="menu-item"><a href="http://www.math.illinois.edu/~berndt/math441.html">MATH441</a></div>
-  <div class="menu-category">Others</div>
-  <div class="menu-item"><a href="http://www.math.illinois.edu/~berndt/math441.html">MATH441</a></div>
+  <div class="menu-category">Links</div>
+  <div class="menu-item">Annoying Precision math bolg<a href="https://qchu.wordpress.com"> here</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
