--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="menu-category">Teaching</div>
   <div class="menu-item"><a href="http://www.math.illinois.edu/~berndt/math441.html">MATH441</a></div>
   <div class="menu-category">Links</div>
-  <div class="menu-item">Annoying Precision math bolg<a href="https://qchu.wordpress.com"> here</a></div>
+  <div class="menu-item">math bolg<a href="https://qchu.wordpress.com"></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
