--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ Urbana, IL 61801<br /></p>
     <li><p> MATH518 Differential Manifolds</p>
     </li>
   </ul>
-  <h2> Links</h2>
+  <h2> Graduate Courses</h2>
   <ul> 
-    <li><p>Annoying Precision math bolg<a href="https://qchu.wordpress.com"> here</a></p>
+    <li><p>Real analysis, Abstract Algebra, Harmonic Analysis, Probability Theory I, Probability Theory II, 
+      Functional Analysis, Banach Space, Differential Manifolds, Riemann Geometry, Algebraic Topology I, Algebraic Topology II
+      Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE</p>
     </li>
   </ul>
 <div id="footer">
