--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Urbana, IL 61801<br /></p>
   <ul> 
     <li><p>Real analysis, Abstract Algebra, Harmonic Analysis, Probability Theory I, Probability Theory II, 
       Functional Analysis, Banach Space, Differential Manifolds, Riemann Geometry, Algebraic Topology I, Algebraic Topology II
-      Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE</p>
+      Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE, Operator Algebra, </p>
     </li>
   </ul>
 <div id="footer">
