--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Urbana, IL 61801<br /></p>
     <li><p>Real analysis, Abstract Algebra, Harmonic Analysis, Probability Theory I, Probability Theory II, 
       Functional Analysis, Banach Space, Differential Manifolds, Riemann Geometry, Algebraic Topology I, Algebraic Topology II
       Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE, Operator Algebra, Hilbert Space,
-      Representation Theory, </p>
+      Representation Theory, Complex Analysis( passed the PhD Comprehensive)</p>
     </li>
   </ul>
 <div id="footer">
