--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ Urbana, IL 61801<br /></p>
   </ul>
   <h2> Graduate Courses</h2>
   <ul> 
-    <li><p>Real analysis, Abstract Algebra, Harmonic Analysis, Probability Theory I, Probability Theory II, 
-      Functional Analysis, Banach Space, Differential Manifolds, Riemann Geometry, Algebraic Topology I, Algebraic Topology II
-      Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE, Operator Algebra, Hilbert Space,
-      Representation Theory, Complex Analysis( passed the PhD Comprehensive)</p>
+    <li><p>Real analysis, Abstract Algebra, Harmonic Analysis, Probability Theory I, Probability Theory II</p></li>
+     <li><p> Functional Analysis, Banach Space, Differential Manifolds, Riemann Geometry, Algebraic Topology I, </p></li>
+   <li><p> Algebraic Topology II, Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE </p></li>
+   <li><p> Operator Algebra, Hilbert Space, Representation Theory, Complex Analysis( passed the PhD Comprehensive)</p>
     </li>
   </ul>
 <div id="footer">
