--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ Urbana, IL 61801<br /></p>
   <h2> Graduate Courses</h2>
   <ul> 
     <li><p>Real analysis, Functional Analysis, Harmonic Analysis, Probability Theory I, Probability Theory II</p></li>
-     <li><p> Abstract Algebra, Banach Space, Differential Manifolds, Riemann Geometry(not registered), Algebraic Topology I(not registered), </p></li>
-   <li><p> Algebraic Topology II, Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE</p></li>
+     <li><p> Abstract Algebra I, Banach Space, Differential Manifolds, Riemann Geometry(not registered), Algebraic Topology I(not registered), </p></li>
+   <li><p> Algebraic Topology II, Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE, Abstract Algebra II</p></li>
    <li><p> Operator Algebra, Hilbert Space, Representation Theory, Complex Analysis( passed the PhD Comprehensive),Geometric Measure Theroy</p>
     </li>
   </ul>
