--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ Urbana, IL 61801<br /></p>
 </div></div>
   <h2> Biography </h2>
   <ul>
-    <li><p> I am a second year master student of mathematics at University of Illinois at Urbana-Champaign, I obtained my Bechleor degree from Xidian University in China.</p>
+    <li><p> I am a second year master student of mathematics at University of Illinois at Urbana-Champaign, I am from China.</p>
     </li>
   </ul>
 <h2>Research interests</h2>
 <ul>
-<li><p>Probability Theory, Potential Theory, and some topics related to partial differential equations and mathematical physics</p>
+<li><p>Probability Theory, Potential Theory, and some topics related to mathematical physics</p>
 </li>
 <li><p>Differential Geometry</p>
 </li>
@@ -59,14 +59,6 @@ Urbana, IL 61801<br /></p>
     <li><p>MATH525 Algebraic Topology(on working and to be updated soon)</p>
     </li>
     <li><p> MATH518 Differential Manifolds</p>
-    </li>
-  </ul>
-  <h2> Graduate Courses</h2>
-  <ul> 
-    <li><p>Real analysis, Functional Analysis, Harmonic Analysis, Probability Theory I, Probability Theory II, Quantum Information Theory</p></li>
-     <li><p> Abstract Algebra I, Banach Space, Differential Manifolds, Riemann Geometry(not registered), Algebraic Topology I(not reg) </p></li>
-   <li><p> Algebraic Topology II, Applied Stochastic Process, Partial Differential Equation, Spectral Theory for PDE, Abstract Algebra II</p></li>
-   <li><p> Operator Algebra, Hilbert Space, Representation Theory, Complex Analysis( passed the PhD Comprehensive),Geometric Measure Theroy, Weyl Tube Formula(not reg)</p>
     </li>
   </ul>
 <div id="footer">
