--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Info</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="new-cv.pdf">CV</a></div>
+<div class="menu-item"><a href=" ">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="ln.html">Publication</a></div>
   <div class="menu-item"><a href="in.html">Lecture&nbsp;notes</a></div>
