--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Urbana, IL 61801<br /></p>
 </div></div>
   <h2> Biography </h2>
   <ul>
-    <li><p> I am a second year master student of mathematics at University of Illinois at Urbana-Champaign, I am from China.</p>
+    <li><p> I am a second year Phd student of mathematics at University of Illinois at Urbana-Champaign, my interests are mainly about probability and geometry.</p>
     </li>
   </ul>
 <h2>Research interests</h2>
