--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Urbana, IL 61801<br /></p>
   </ul>
 <h2>Research interests</h2>
 <ul>
-<li><p>Probability Theory, Potential Theory, and some topics related to mathematical physics</p>
+<li><p>Spin Glass, Stochastic Differential Equations, random matrix, integrable probability</p>
 </li>
-<li><p>Differential Geometry</p>
+<li><p>Ricci Curvature</p>
 </li>
 </ul>
 <h2>Seminars Calendar at UIUC Math Department</h2>  
