--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="blockcontent">
 <p>Graduate Student of <a href="http://www.math.illinois.edu">Mathematics</a><br />
 <a href="http://www.uiuc.edu/">University of Illinois at Urbana-Champaign</a><br />
-Altgeld Hall<br />
+Altgeld Hall 130<br />
 Urbana, IL 61801<br /></p>
 <p>✉   qiangwu2@illinois.edu<br />
 ☏   217-418-5286</p>
