--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Qiang Wu </h1>
+<h1>QIANG WU </h1>
 </div>
 <div class="infoblock">
 <div class="blockcontent">
