--- a/index.html
+++ b/index.html
@@ -1715,7 +1715,7 @@
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:22.0pt;font-family:Times'>
-                    Tianyi Zheng
+                    Qiang Wu
                     <o:p></o:p>
                 </span>
             </b>
@@ -1729,11 +1729,11 @@
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                I’m an
-                Associate Professor in the Department of Mathematics at the UC San Diego.
-                Before coming to UCSD in the Fall of 2016, I was a postdoc in the Department of
-                Mathematics at Stanford University. I received Ph.D. in Mathematics from Cornell
-                University in 2013.
+            I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
+            primary research interest is in probablity and statistical physics, such as spin glasses, random polymer models and their interactions
+            with other areas like random matrices, Gaussian free field etc. I'm also interested in
+            the application of mean field spin glass theory to high dimensional statistics and information theory. I am advised by Professor Partha Dey and Professor 
+            Renming Song.
                 <o:p></o:p>
             </span>
         </p>
