--- a/index.html
+++ b/index.html
@@ -1744,18 +1744,7 @@
             </span>
         </p>
 
-        <p class=MsoNormal>
-            <span style='font-size:14.0pt;font-family:Times;mso-fareast-font-family:
-            "Times New Roman";mso-bidi-font-family:Arial;color:#444444;background:white'>My
-            primary research interest is in random walks on groups. I'm also interested in
-            harmonic functions on groups, groups of intermediate volume growth and subgroup
-            dynamics in the Chabauty spaces. </span>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            "Times New Roman"'>
-                <o:p></o:p>
-            </span>
-        </p>
+ 
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
@@ -1772,7 +1761,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Email:
-                tzheng2 AT math.ucsd.edu
+                qiangwu2@illinois.edu
                 <o:p></o:p>
             </span>
         </p>
@@ -1780,7 +1769,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Office:
-                6202 Applied Physics and Mathematics, UCSD
+                AH 130, Department of mathematics, UIUC.
                 <o:p></o:p>
             </span>
         </p>
@@ -1797,25 +1786,6 @@
             </span>
         </p>
 
-        <p class=MsoNormal>
-            <b style='mso-bidi-font-weight:normal'>
-                <span style='font-size:18.0pt;font-family:Times'>
-                    Teaching
-                    <o:p></o:p>
-                </span>
-            </b>
-        </p>
-
-        <p class=MsoNormal>
-            <span style='font-size:14.0pt;font-family:Times'>
-                I’m
-                teaching 
-                <a href="http://www.math.ucsd.edu/~tiz161/180c.html">MATH180C</a>
-                 in
-                Fall 2019.
-                <o:p></o:p>
-            </span>
-        </p>
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
@@ -1869,7 +1839,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    On FC-central extensions of groups of intermediate growth, 
+                    Fluctuation results for Multi-species Sherrington-Kirkpatrick model in the replica symmetric regime, 
                     <o:p></o:p>
                 </span>
             </i>
@@ -1879,7 +1849,7 @@
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
                 submitted (2020), 
-                <a href="https://arxiv.org/abs/2001.07814">arXiv 2001.07814</a>
+                <a href="https://arxiv.org/abs/2012.13381">arXiv 2012.13381</a>
                 <o:p></o:p>
             </span>
         </p>
@@ -1898,106 +1868,9 @@
             </span>
         </p>
 
-        <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l5 level1 lfo1'>
-            <!--[if !supportLists]-->
-            <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
-                <span style='mso-list:Ignore'>
-                    o
-                    <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-                    </span>
-                </span>
-            </span>
-            <!--[endif]-->
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
-                "Times New Roman"'>Neretin groups admit no non-trivial invariant random
-                subgroups,</span>
-            </i>
-            <span style='font-size:14.0pt;font-family:"Times New Roman";
-            mso-fareast-font-family:"Times New Roman"'>
-                <i style='mso-bidi-font-style:normal'>
-                    <o:p></o:p>
-                </i>
-            </span>
-        </p>
+       
 
-        <p class=MsoListParagraphCxSpMiddle>
-            <span style='font-size:14.0pt;font-family:
-            "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                submitted (2019), 
-                <a href="https://arxiv.org/abs/1905.07605">arXiv 1905.07605</a>
-                .
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoListParagraphCxSpLast>
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
-                "Times New Roman"'>
-                    <o:p>&nbsp;</o:p>
-                </span>
-            </i>
-        </p>
-
-        <p class=MsoNormal>
-            <b style='mso-bidi-font-weight:normal'>
-                <span style='font-size:14.0pt;font-family:Times'>
-                    <o:p>&nbsp;</o:p>
-                </span>
-            </b>
-        </p>
-
-        <p class=MsoListParagraphCxSpFirst style='text-indent:-.25in;mso-list:l5 level1 lfo1'>
-            <!--[if !supportLists]-->
-            <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
-                <span style='mso-list:Ignore'>
-                    o
-                    <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-                    </span>
-                </span>
-            </span>
-            <!--[endif]-->
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
-                "Times New Roman"'>On rigid stabilizers and invariant random subgroups of
-                groups of homeomorphisms,</span>
-            </i>
-            <span style='font-size:14.0pt;font-family:
-            "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                <i style='mso-bidi-font-style:normal'>
-                    <o:p></o:p>
-                </i>
-            </span>
-        </p>
-
-        <p class=MsoListParagraphCxSpMiddle>
-            <span style='font-size:14.0pt;font-family:
-            "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                submitted (2019), 
-                <a href="https://arxiv.org/abs/1901.04428">arXiv 1901.04428</a>
-                .
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoListParagraphCxSpMiddle>
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
-                "Times New Roman"'>
-                    <o:p>&nbsp;</o:p>
-                </span>
-            </i>
-        </p>
-
-        <p class=MsoListParagraphCxSpMiddle>
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
-                "Times New Roman"'>
-                    <o:p>&nbsp;</o:p>
-                </span>
-            </i>
-        </p>
+        
 
         <p class=MsoListParagraphCxSpLast style='text-indent:-.25in;mso-list:l5 level1 lfo1'>
             <!--[if !supportLists]-->
