--- a/index.html
+++ b/index.html
@@ -1960,7 +1960,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    Universality of l^p Grothedeick problem: 2<p< &infin, 
+                    Universality of l^p Grothedeick problem: 2 &< p &< &infin, 
                     <o:p></o:p>
                 </span>
             </i>
