--- a/index.html
+++ b/index.html
@@ -1732,8 +1732,9 @@
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
             primary research interest is in probablity and statistical physics, such as spin glasses, random polymer models and their interactions
             with other areas like random matrices, Gaussian free field etc. I'm also interested in
-            the application of mean field spin glass theory to high dimensional statistics and information theory. I am advised by Professor Partha Dey and Professor 
-            Renming Song.
+            the application of mean field spin glass theory to high dimensional statistics and information theory. I am advised by Professor 
+                <a href="https://faculty.math.illinois.edu/~psdey/">Partha Dey</a> and Professor 
+            <a href="https://faculty.math.illinois.edu/~rsong/">Renming Song</a>.
                 <o:p></o:p>
             </span>
         </p>
@@ -2381,221 +2382,8 @@
             </span>
         </p>
 
-        <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-        margin-left:.5in;text-indent:-.25in;mso-list:l9 level1 lfo3;background:white'>
-            <!--[if !supportLists]-->
-            <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New";
-            color:#444444'>
-                <span style='mso-list:Ignore'>
-                    o
-                    <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-                    </span>
-                </span>
-            </span>
-            <!--[endif]-->
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:Times;mso-fareast-font-family:"Times New Roman";
-                mso-bidi-font-family:Arial;color:black'>Infinitely supported Liouville measures
-                of Schreier graphs</span>
-            </i>
-            <span style='font-size:14.0pt;font-family:Times;
-            mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial;
-            color:black'>,</span>
-            <span style='font-size:14.0pt;font-family:Times;
-            mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial;
-            color:#444444'>
-                <o:p></o:p>
-            </span>
-        </p>
+       
 
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; with
-                Kate Juschenko. Group Geom. Dyn, 12, (2018), no.3 &nbsp;
-                <a href="http://arxiv.org/abs/1608.03554">
-                    <span style='color:#8A8C50'>arXiv
-                    1608.03554</span>
-                </a>
-                &nbsp;.
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                <o:p>&nbsp;</o:p>
-            </span>
-        </p>
-
-        <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-        margin-left:.5in;text-indent:-.25in;mso-list:l9 level1 lfo3;background:white'>
-            <!--[if !supportLists]-->
-            <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New";
-            color:#444444'>
-                <span style='mso-list:Ignore'>
-                    o
-                    <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-                    </span>
-                </span>
-            </span>
-            <!--[endif]-->
-            <i style='mso-bidi-font-style:normal'>
-                <span style='font-size:14.0pt;font-family:Times;mso-fareast-font-family:"Times New Roman";
-                mso-bidi-font-family:Arial;color:black'>Speed of random walks, isoperimetry and
-                compression of finitely generated groups</span>
-            </i>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black'>,</span>
-            <span style='font-size:14.0pt;font-family:Times;
-            mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial;
-            color:#444444'>
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; with
-                Jérémie&nbsp;Brieussel. Submitted, (2015)&nbsp;
-                <a href="http://arxiv.org/abs/1510.08040" target="_blank">
-                    <span style='color:#8A8C50'>arXiv
-                    1510.08040</span>
-                </a>
-                &nbsp;.
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                <o:p>&nbsp;</o:p>
-            </span>
-        </p>
-
-        <ul type=circle>
-            <li class=MsoNormal style='color:#444444;mso-margin-top-alt:auto;mso-margin-bottom-alt:
-                 auto;mso-list:l6 level1 lfo4;tab-stops:list .5in;background:white'>
-                <i style='mso-bidi-font-style:normal'>
-                    <span style='font-size:14.0pt;
-                         font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-                         Arial;color:black'>Isoperimetric profiles and random walks on some
-                         permutation wreath products</span>
-                </i>
-                <span style='font-size:14.0pt;
-                     font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-                     Arial;color:black'>,&nbsp;</span>
-                <span style='font-size:14.0pt;font-family:
-                     Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial'>
-                    <o:p></o:p>
-                </span>
-            </li>
-        </ul>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; with
-                Laurent Saloff-Coste. Revista Matematica Iberoamericana, 34 (2018), no.2 &nbsp;
-                <a href="http://arxiv.org/abs/1510.08830" target="_blank">
-                    <span style='color:#8A8C50'>arXiv
-                    1510.08830</span>
-                </a>
-                &nbsp;.
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:#444444'>
-                <o:p>&nbsp;</o:p>
-            </span>
-        </p>
-
-        <ul type=circle>
-            <li class=MsoNormal style='color:#444444;mso-margin-top-alt:auto;mso-margin-bottom-alt:
-                 auto;mso-list:l1 level1 lfo5;tab-stops:list .5in;background:white'>
-                <i style='mso-bidi-font-style:normal'>
-                    <span style='font-size:14.0pt;
-                         font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-                         Arial;color:black'>Random walks and isoperimetric profiles under moment
-                         conditions</span>
-                </i>
-                <span style='font-size:14.0pt;font-family:Times;
-                     mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial;
-                     color:black'>,</span>
-                <span style='font-size:14.0pt;font-family:Times;
-                     mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial'>
-                    <o:p></o:p>
-                </span>
-            </li>
-        </ul>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;with
-                Laurent Saloff-Coste. Ann. Probab. 44 (2016), no.6 
-                <a href="http://arxiv.org/abs/1501.05929" target="_blank">
-                    <span style='color:#8A8C50'>arXiv
-                    1501.05929</span>
-                </a>
-                &nbsp;.
-                <o:p></o:p>
-            </span>
-        </p>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:#444444'>
-                <o:p>&nbsp;</o:p>
-            </span>
-        </p>
-
-        <ul type=circle>
-            <li class=MsoNormal style='color:#444444;mso-margin-top-alt:auto;mso-margin-bottom-alt:
-                 auto;mso-list:l3 level1 lfo6;tab-stops:list .5in;background:white'>
-                <i style='mso-bidi-font-style:normal'>
-                    <span style='font-size:14.0pt;
-                         font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-                         Arial;color:black'>Random walks on free solvable groups</span>
-                </i>
-                <span style='font-size:14.0pt;font-family:Times;mso-fareast-font-family:"Times New Roman";
-                     mso-bidi-font-family:Arial;color:black'>,</span>
-                <span style='font-size:
-                     14.0pt;font-family:Times;mso-fareast-font-family:"Times New Roman";
-                     mso-bidi-font-family:Arial'>
-                    <o:p></o:p>
-                </span>
-            </li>
-        </ul>
-
-        <p class=MsoNormal style='background:white'>
-            <span style='font-size:14.0pt;
-            font-family:Times;mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:
-            Arial;color:black;background:white'>
-                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;with
-                Laurent Saloff-Coste. Mathematics Zeitschrift, 279(3-4), 811-848.&nbsp;
-                <a href="https://sites.google.com/site/tianyizhengmath/fsol.pdf?attredirects=0&amp;d=1" target="_blank">
-                    <span style='color:#8A8C50'>pdf</span>
-                </a>
-                &nbsp;.
-                <o:p></o:p>
-            </span>
-        </p>
 
         <p class=MsoNormal style='background:white'>
             <span style='font-size:14.0pt;
