--- a/index.html
+++ b/index.html
@@ -2151,7 +2151,7 @@
                 with Anna Erschler. Invent. Math. 219 (2020), no.3, 1069-1155.
             </span>
             <span style='font-family:Verdana;mso-fareast-font-family:"Times New Roman";
-            mso-bidi-font-family:"Times New Roman";color:black'>&nbsp;</span>
+            mso-bidi-font-family:"Times New Roman";:black'>&nbsp;</span>
             <span style='font-family:"Times New Roman";mso-fareast-font-family:"Times New Roman"'></span>
             <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
             "Times New Roman"'>
@@ -2177,6 +2177,7 @@
 
         <p class=MsoNormal>
             <span style='font-family:"Times New Roman";mso-fareast-font-family:
+            "Times New Roman";c:black;background:white'>&nbsp;</span>
             "Times New Roman";color:black;background:white'>&nbsp;</span>
             <span style='font-family:"Times New Roman";mso-fareast-font-family:"Times New Roman"'>
                 <o:p></o:p>
