--- a/index.html
+++ b/index.html
@@ -2177,7 +2177,7 @@
 
         <p class=MsoNormal>
             <span style='font-family:"Times New Roman";mso-fareast-font-family:
-            "Times New Roman";c:black;background:white'>&nbsp;</span>
+            "Times New Roman";color:black;background:white'>&nbsp;</span>
             "Times New Roman";color:black;background:white'>&nbsp;</span>
             <span style='font-family:"Times New Roman";mso-fareast-font-family:"Times New Roman"'>
                 <o:p></o:p>
